user logout, user show page updated, travels controller, travels new and show views, helpers class and addes helpers methods to controller

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,9 +12,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
+    <style>
+
+    .links {
+      float: right;
+      display: inline;
+      padding-left: 0;
+      margin-right: 4px;
+    }
+
+    .links a:link, .links a:visited, .links a:hover, .links a:active {
+      color: darkblue;
+        }
+        </style>
+
+
   </head>
   <body>
     <div class="wrapper">
+    <% if Helpers.is_logged_in?(session) %>
+    <p class="links"><a href="/logout" class="logout">Log Out</a></p>
+     <p class="links"><a href="/users/<%=Helpers.current_user(session).id if Helpers.is_logged_in?(session)%>">My Travels</a></p>
+     <p class="links"><a href="/travels/new">New Travel</a></p>
+     <p class="links"><a href="#">All Travels</a></p>
+     <p class="links"><a href="/users">All Users</a></p>
+     <% end %>
 
         <%= yield %>
 
