--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,7 +1,8 @@
 <div class="container">
 
   <div class="col-md-8 col-md-offset-2">
-     <h1>Welcome to the Virtual Travel!</h1>
+     <h1>Welcome to the Travel App!</h1>
+     <h3>Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h3>
     </div>
 
   
