--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,10 @@
 <h3><%= @user.username %></h3>
+
+<ul>
+<% @travels.each do |travel| %>
+<li><a href="/travels/<%=travel.id%>"> <%= travel.name %> </a></li>
+
+
+
+<% end %>
+</ul>
