--- a/app/views/travels/show.erb
+++ b/app/views/travels/show.erb
@@ -6,4 +6,11 @@
 
 <% if Helpers.current_user(session) == @travel.user %>
 <a href="/travels/<%=@travel.id%>/edit">Edit Travel</a>
+
+
+<form action="/travels/<%=@travel.id%>/delete" method="post">
+<input type="hidden" name="_method" value="delete">
+<input type="submit" value="Delete">
+</form>
+
 <% end %>
