font and edit form

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,7 @@
     }
 
     .links a:link, .links a:visited, .links a:hover, .links a:active {
-      color: darkblue;
+      color: black;
         }
         </style>
 
