--- a/app/views/travels/edit.erb
+++ b/app/views/travels/edit.erb
@@ -5,9 +5,9 @@
 <label>Name: </label>
 <input type="text" name="travel[name]" value="<%=@travel.name%>"/><br />
 <label>Description: </label>
-<textarea rows="12" cols="80" type="text" name="travel[description]" value="<%=@travel.description%>"></textarea><br />
+<textarea rows="12" cols="80" type="text" name="travel[description]" placeholder="<%=@travel.description%>"></textarea><br />
 <label>Recommendation: </label>
-<textarea rows="12" cols="80" type="text" name="travel[recommendation]" value="<%=@travel.recommendation%>"></textarea><br />
+<textarea rows="12" cols="80" type="text" name="travel[recommendation]" placeholder="<%=@travel.recommendation%>"></textarea><br />
 <label>Distance from Home: </label>
 <input type="text" name="travel[distance]" value="<%=@travel.distance%>"/><br />
 <input type="submit" value="Edit Travel">
