--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,86 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <style>
 
+     h1 {
+        margin-left: 10px;
+        color: darkgreen;
+     }
+     
+     p, h2, h3, h4 {
+       margin-left: 10px;
+        color: darkgreen;
+     }
+
+    
+    form {
+      margin-left: 25px;
+      font-size: 20px;
+      color: teal;
+      text-align:justify;
+      max-width: 980px;
+      margin-right: 30px;
+    }
+
+
+    label {
+      display: inline-block;
+      color: teal;
+    }
+  
+
+      #header {
+        display: inline;
+        color: teal;
+         margin-left: 10px;
+      }
+    
+     .description_index {
+       margin-left: 40px;
+       margin-right: 20px;
+       max-width: 980px;
+       overflow: hidden;
+       overflow-x: scroll;
+       overflow-y: scroll;
+       max-height: 150px;
+     }
+    
+    .edit {
+     margin-left: 20px;
+     color: teal;
+    }
+
+
+    .user_list {
+      margin-left: 15px;
+      color: teal;
+       }
+    
+    
+    .description {
+       margin-left: 20px;
+       margin-right: 20px;
+       max-width: 890px;
+       overflow: hidden;
+       text-overflow: ellipsis;
+    }
+    
+    
+    #user_description {
+       max-width: 890px;
+       max-height: 150px;
+       color: teal;
+        overflow: scroll;
+    }
+    
+    
+    
+    .logout {
+      float: right;
+      display: inline;
+      margin-right: 10px;
+    }
+    
+    
     .links {
       float: right;
       display: inline;
@@ -24,12 +104,34 @@
     .links a:link, .links a:visited, .links a:hover, .links a:active {
       color: black;
         }
-        </style>
+      a:visited {
+        color: teal;
+      }
+    .welcome {
+       display: inline;
+       }
+       .top_bar {
+      background-color:
+      teal;
+      color: white;
+      padding: 10px;
+      }
+     .flash {
+         color: teal;
+         font-size: 20px;
+          font-weight: bold;
+     }
+
+   </style>
 
 
   </head>
   <body>
+  
     <div class="wrapper">
+    
+
+
     <% if Helpers.is_logged_in?(session) %>
     <p class="links"><a href="/logout" class="logout">Log Out</a></p>
      <p class="links"><a href="/users/<%=Helpers.current_user(session).id if Helpers.is_logged_in?(session)%>">My Travels</a></p>
