worked with css

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -2,7 +2,11 @@
 
   <div class="col-md-8 col-md-offset-2">
      <h1>Welcome to the Travel App!</h1>
-     <h3>Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h3>
+     
+    <h2>Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h2>
+
+    <img src="./images/travels.jpg" alt="Sidney Opera House" width="450" height="auto"></img>
+     
     </div>
 
   
