--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,17 +14,38 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <style>
 
-     h1 {
+    body {
+    background-color: #f6f6cc;
+    font-family: sans-serif;
+    line-height: 18px;
+  }
+  
+   /* section {
+      width: 100%;
+    } */
+    img {
+      /* width: 70%;
+      max-width: 100%; */
+      text-align: center; 
+    }
+      h1 {
         margin-left: 10px;
+        font-size: 36px;
+        line-height: 54px;
         color: darkgreen;
-     }
+     } 
      
-     p, h2, h3, h4 {
+      h2, h3, h4 {
        margin-left: 10px;
-        color: darkgreen;
-     }
+       font-size: 18px;
+       line-height: 36px;
+       color: darkgreen;
+     } 
 
-    
+     p {
+    margin-bottom: 18px;
+  }
+
     form {
       margin-left: 25px;
       font-size: 20px;
@@ -33,19 +54,12 @@
       max-width: 980px;
       margin-right: 30px;
     }
-
-
-    label {
-      display: inline-block;
-      color: teal;
-    }
-  
-
+ 
       #header {
         display: inline;
         color: teal;
          margin-left: 10px;
-      }
+      } 
     
      .description_index {
        margin-left: 40px;
@@ -60,14 +74,12 @@
     .edit {
      margin-left: 20px;
      color: teal;
-    }
-
+     } 
 
     .user_list {
       margin-left: 15px;
       color: teal;
        }
-    
     
     .description {
        margin-left: 20px;
@@ -76,23 +88,19 @@
        overflow: hidden;
        text-overflow: ellipsis;
     }
-    
-    
-    #user_description {
+     
+     #user_description {
        max-width: 890px;
        max-height: 150px;
        color: teal;
         overflow: scroll;
     }
     
-    
-    
-    .logout {
+     .logout {
       float: right;
       display: inline;
       margin-right: 10px;
-    }
-    
+    } 
     
     .links {
       float: right;
@@ -116,11 +124,7 @@
       color: white;
       padding: 10px;
       }
-     .flash {
-         color: teal;
-         font-size: 20px;
-          font-weight: bold;
-     }
+     
 
    </style>
 
@@ -130,7 +134,7 @@
   
     <div class="wrapper">
     
-
+   
 
     <% if Helpers.is_logged_in?(session) %>
     <p class="links"><a href="/logout" class="logout">Log Out</a></p>
