--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,48 +1,71 @@
-@media screen {
-  /* --- Reset Styles --- */
-  * {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+
+body {
+  background-color: #FFFF7F;
+  font-family: sans-serif;
+  line-height: 18px;
+}
+h1 {
+  font-family: sans-serif;
+  font-size: 36px;
+  line-height: 54px;
+}
+h2 {
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 16px;
+}
+h3 {
+  font-size: 18px;
+  line-height: 36px;
+}
+p {
+  margin-bottom: 18px;
+}
+
+
+
+
+
+
+/* /* 
 
   html, body {
     height: 100%;
     width: 100%;
   }
-
+/* 
   /* --- Welcome Page Styles --- */
-  body {
-    background-color: lightblue;
+  /* body {
+    background-color: beige;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
-  }
+  }  */
 
-  .wrapper {
-    background: #fff;
+  /* .wrapper {
+    background: beige;
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    -webkit-box-shadow: 0 0 10px rgba(161, 138, 138, 0.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
     margin: 16px auto;
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
-    width: 85%;
-  }
+    /* width: 85%;
+  /* }  */ */ 
 
-  h1 {
+  /* h1 {
     font-size: 36px;
     line-height: 54px;
-  }
+  } */
 
-  h2 {
+  /* h2 {
     border-bottom: 2px solid #ccc;
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
-  }
+  } */
 
-  h3 {
+  /* h3 {
     font-size: 18px;
     line-height: 36px;
   }
@@ -53,22 +76,22 @@
 
   .main {
     overflow: hidden;
-  }
-
+  } */
+/* 
   .content {
-    float: left;
+    text-align: center;
     width: 60%; /* 480px / 800px */
-  }
-
+  } */
+/* 
   .sidebar {
     background: #eee;
     border: 1px solid #ccc;
     float: right;
     padding: 2.08333333333%; /* 5px / 240px */
-    width: 30%; /* 240px / 800px */
-  }
+    /* width: 30%; 240px / 800px */
+  /* } */
 
-  .sidebar ul {
+  /* .sidebar ul {
     font-size: 14px;
   }
 
@@ -80,8 +103,8 @@
     border-top: 2px solid #ccc;
     margin-top: 20px;
     padding-top: 20px;
-  }
-}
+  } */
+/* }
 
 @media screen and (max-width: 600px) {
   .wrapper {
@@ -94,8 +117,8 @@
   .content, .sidebar {
     float: none;
     width: 100%;
-  }
-
+  } */
+/* 
   .sidebar {
     background: transparent;
     border: none;
@@ -112,4 +135,7 @@
     font-size: 18px;
     line-height: 24px;
   }
-}
+} */
+
+ */
+ */ */
