centered image, added gradient, changed font

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -5,7 +5,7 @@
      
     <h2>Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h2>
 
-    <img src="./images/travels.jpg" alt="Sidney Opera House" width="450" height="auto"></img>
+    <img src="./images/travels.jpg" alt="Sidney Opera House" class="center" width="450" height="auto"></img>
      
     </div>
 
