--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,90 +18,58 @@
     background-color: #f6f6cc;
     font-family: sans-serif;
     line-height: 18px;
-  }
-  
+      }
+     .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+    }
+
+#grad {
+  background-image: linear-gradient(red, yellow);
+}
    /* section {
       width: 100%;
     } */
-    img {
-      /* width: 70%;
-      max-width: 100%; */
+    /* img {
+       width: 100%;
+      max-width: 100%; 
       text-align: center; 
-    }
+    } */
       h1 {
         margin-left: 10px;
         font-size: 36px;
         line-height: 54px;
         color: darkgreen;
-     } 
+         } 
      
       h2, h3, h4 {
        margin-left: 10px;
        font-size: 18px;
        line-height: 36px;
        color: darkgreen;
-     } 
+          } 
 
      p {
     margin-bottom: 18px;
-  }
+       }
 
     form {
-      margin-left: 25px;
-      font-size: 20px;
+      margin-left: 35px;
+      font-size: 16px;
       color: teal;
       text-align:justify;
       max-width: 980px;
       margin-right: 30px;
-    }
- 
-      #header {
+         } 
+/*  
+       #header {
         display: inline;
         color: teal;
          margin-left: 10px;
-      } 
-    
-     .description_index {
-       margin-left: 40px;
-       margin-right: 20px;
-       max-width: 980px;
-       overflow: hidden;
-       overflow-x: scroll;
-       overflow-y: scroll;
-       max-height: 150px;
-     }
-    
-    .edit {
-     margin-left: 20px;
-     color: teal;
-     } 
+      }   */
 
-    .user_list {
-      margin-left: 15px;
-      color: teal;
-       }
-    
-    .description {
-       margin-left: 20px;
-       margin-right: 20px;
-       max-width: 890px;
-       overflow: hidden;
-       text-overflow: ellipsis;
-    }
-     
-     #user_description {
-       max-width: 890px;
-       max-height: 150px;
-       color: teal;
-        overflow: scroll;
-    }
-    
-     .logout {
-      float: right;
-      display: inline;
-      margin-right: 10px;
-    } 
-    
     .links {
       float: right;
       display: inline;
@@ -110,32 +78,18 @@
     }
 
     .links a:link, .links a:visited, .links a:hover, .links a:active {
-      color: black;
+      color: teal;
         }
       a:visited {
         color: teal;
       }
-    .welcome {
-       display: inline;
-       }
-       .top_bar {
-      background-color:
-      teal;
-      color: white;
-      padding: 10px;
-      }
      
-
    </style>
-
-
-  </head>
-  <body>
+   </head>
+   <body>
   
     <div class="wrapper">
     
-   
-
     <% if Helpers.is_logged_in?(session) %>
     <p class="links"><a href="/logout" class="logout">Log Out</a></p>
      <p class="links"><a href="/users/<%=Helpers.current_user(session).id if Helpers.is_logged_in?(session)%>">My Travels</a></p>
