--- a/app/views/travels/index.erb
+++ b/app/views/travels/index.erb
@@ -6,3 +6,9 @@
 <% end %>
 
 </ul>
+
+<form action="/search" method="post">
+<label>Travel: </label>
+<input type="search" name="travel" /><br />
+<input type="submit" value="search" />
+</form>
