--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -7,6 +7,12 @@
 
     <img src="./images/travels.jpg" alt="Sidney Opera House" class="center" width="450" height="auto"></img>
      
+     <form action="/search" method="post">
+     <label>Travel: </label>
+    <input type="search" name="travel" /><br />
+    <input type="submit" value="search" />
+    </form>
+    
     </div>
 
   
